fin de la formation

--- a/starwars-game/projects/game/src/app/shared/components/grid/grid.component.html
+++ b/starwars-game/projects/game/src/app/shared/components/grid/grid.component.html
@@ -1,6 +1,7 @@
 {{ logView() }}
 
 <button (click)="onClick()">Trigger change detection</button>
+<button (click)="setInterval()">Run Interval</button>
 
 <div class="mastermind">
   <game-cell *ngFor="let item of cells; trackBy: trackByFn" [item]="item" ></game-cell>
